--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,8 @@
                 <version>3.1.2</version>
                 <configuration>
                     <configLocation>src/main/resources/checkstyle.xml</configLocation>
+                    <violationSeverity>warning</violationSeverity>
+                    <failOnViolation>true</failOnViolation>
                 </configuration>
             </plugin>
         </plugins>
