--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,18 @@
                 </configuration>
             </plugin>
         </plugins>
-
     </build>
+<reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                    <configLocation>src/main/resources/checkstyle.xml</configLocation>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
 
 </project>
